--- a/index.css
+++ b/index.css
@@ -33,16 +33,17 @@ header {
   justify-content: space-around;
   align-items: center;
   background-color: #835d1a;
-  height: 10vmin;
+  height: 0;
   position: fixed;
   width: 100vw;
   color: #fff;
 }
 header .black-icon {
   filter: invert(1);
+  height: 0;
 }
 main {
-  margin-top: 10vmin;
+  margin-top: 0;
 }
 section {
   display: flex;
@@ -50,10 +51,20 @@ section {
   text-align: center;
   font-family: Adam;
   color: #835d1a;
+  margin-top: 1em;
 }
-section img {
-  max-width: 100%;
-  margin-top: 3em;
+section#home img {
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: 0 auto;
+}
+section#productos .slider-for {
+  max-width: 100vmin;
+  margin-left: auto;
+  margin-right: auto;
+}
+section#productos .slider {
+  margin-top: 2em;
 }
 hr {
   width: 80%;
@@ -68,5 +79,5 @@ footer p {
   line-height: 1.5em;
 }
 footer i {
-  margin: 1em;
+  margin: 0.5em;
 }
