--- a/index.styl
+++ b/index.styl
@@ -2,7 +2,7 @@ title-color = #835d1a
 header-background-color = title-color
 background-color = #fffacd
 ruler-color = #F6C122
-header-height = 10vmin
+header-height = 0//10vmin
 @font-face
   font-family: Adam
   src: url("ADAM.CG.PRO.otf")
@@ -12,6 +12,12 @@ a, p, h1, h2, h3, h4, h5, img, hr
 a
   text-decoration: none
   color: inherit
+responsive()
+  max-width: 100vw
+  max-height: 100vh
+  margin: 0 auto
+divide(a, b)
+  a/b
 html
   background-color: background-color
   font-family: Arial
@@ -35,6 +41,7 @@ header
   color: white
   .black-icon
     filter: invert(1)
+    height: divide(header-height, 2)
 main
   margin-top: header-height
 section
@@ -44,9 +51,17 @@ section
   text-align: center
   font-family: Adam
   color: title-color
-  img
-    max-width: 100%
-    margin-top: 3em
+  margin-top: 1em
+  &#home
+    img
+      responsive()
+  &#productos
+    .slider-for
+      max-width: 100vmin
+      margin-left: auto
+      margin-right: auto
+    .slider
+      margin-top: 2em
 hr
   width: 80%
   border: 0.2em solid ruler-color
@@ -59,4 +74,4 @@ footer
     line-height: 1.5em
 
   i
-    margin: 1em
+    margin: 0.5em
