--- a/index.css
+++ b/index.css
@@ -53,6 +53,9 @@ section {
   color: #835d1a;
   margin-top: 2em;
 }
+section#home {
+  margin-top: 1em;
+}
 section#home img {
   max-width: 100vw;
   max-height: 100vh;
