--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ h2,
 h3,
 h4,
 h5,
+h6,
 img,
 hr {
   margin-bottom: 0;
@@ -16,6 +17,9 @@ hr {
 a {
   text-decoration: none;
   color: inherit;
+}
+div:focus {
+  outline: none;
 }
 html {
   background-color: #fffacd;
@@ -61,13 +65,53 @@ section#home img {
   max-height: 100vh;
   margin: 0 auto;
 }
+section#productos hr {
+  border-width: 0.1em;
+  width: 50%;
+  margin-top: 0.5em;
+}
 section#productos .slider-for {
   max-width: 100vmin;
   margin-left: auto;
   margin-right: auto;
 }
+section#productos .slider-nav .draggable {
+  cursor: pointer !important;
+}
 section#productos .slider {
   margin-top: 2em;
+}
+section#productos .details {
+  margin: 0 2em;
+}
+section#productos .details>div {
+  margin-top: 2em;
+}
+section#productos .details p {
+  font-family: Arial;
+}
+section#productos .details img {
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: 0 auto;
+  width: 3em;
+  margin-top: 1em;
+}
+.slick-initialized.slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+.slick-initialized .draggable {
+  cursor: move;
+}
+.slick-initialized .slick-dots {
+  position: static;
+  margin-top: 0.5em;
+}
+.slick-initialized .slick-dots li {
+  margin: 0 1em;
+}
+.slick-initialized .slick-dots li button::before {
+  font-size: 0.5rem;
 }
 hr {
   width: 80%;
