--- a/index.styl
+++ b/index.styl
@@ -7,11 +7,13 @@ header-height = 0//10vmin
   font-family: Adam
   src: url("ADAM.CG.PRO.otf")
 
-a, p, h1, h2, h3, h4, h5, img, hr
+a, p, h1, h2, h3, h4, h5, h6, img, hr
   margin-bottom: 0
 a
   text-decoration: none
   color: inherit
+div:focus
+  outline: none
 responsive()
   max-width: 100vw
   max-height: 100vh
@@ -57,12 +59,43 @@ section
       responsive()
     margin-top: 1em
   &#productos
+    hr
+      border-width: 0.1em
+      width: 50%
+      margin-top: 0.5em
     .slider-for
       max-width: 100vmin
       margin-left: auto
       margin-right: auto
+    .slider-nav
+      .draggable
+        cursor: pointer!important
     .slider
       margin-top: 2em
+    .details
+      margin: 0 2em
+      &>div
+        margin-top: 2em
+      p
+        font-family: Arial
+      img
+        responsive()
+        width: 3em
+        margin-top: 1em
+
+.slick-initialized
+  &.slick-dotted.slick-slider
+    margin-bottom: 0
+  .draggable
+    cursor: move
+  .slick-dots
+    position: static
+    margin-top: 0.5em
+    li
+      margin: 0 1em
+    li button::before
+      font-size: 0.5rem
+
 hr
   width: 80%
   border: 0.2em solid ruler-color
