--- a/index.styl
+++ b/index.styl
@@ -3,6 +3,8 @@ header-background-color = title-color
 background-color = #fffacd
 ruler-color = #F6C122
 header-height = 0//10vmin
+first-font-family = Arial
+second-font-family = Adam
 @font-face
   font-family: Adam
   src: url("ADAM.CG.PRO.otf")
@@ -12,17 +14,61 @@ a, p, h1, h2, h3, h4, h5, h6, img, hr
 a
   text-decoration: none
   color: inherit
-div:focus
-  outline: none
+// div:focus
+//   outline: none
+input, textarea, button, div
+  &:focus
+    outline: none
+    // border: 0.1em beige solid
+input, textarea, button
+  border: none
+  font-size: inherit
+  font-family: first-font-family
+  color: inherit
+button
+  cursor: pointer
+  color: white
+  background-color: title-color
+form
+  display: inherit
+  flex-flow: inherit
+  align-items: inherit
+  justify-content: inherit
+
+// Helpers
+placeholder-color(n)
+  &::-webkit-input-placeholder
+    color: n
+  &::-moz-placeholder
+    color: n
+    opacity:  1
+  &:-moz-placeholder
+    color: n
+    opacity:  1
+  &:-ms-input-placeholder
+    color: n
+placeholder-font-weight(n)
+  &::-webkit-input-placeholder
+    font-weight: n
+  &::-moz-placeholder
+    font-weight: n
+  &:-moz-placeholder
+    font-weight: n
+  &:-ms-input-placeholder
+    font-weight: n
 responsive()
   max-width: 100vw
   max-height: 100vh
   margin: 0 auto
 divide(a, b)
   a/b
+horizontalMargin()
+  margin-left: 2em
+  margin-right: 2em
+
 html
   background-color: background-color
-  font-family: Arial
+  font-family: first-font-family
   font-size: 4.5vmin
 
 body
@@ -51,14 +97,14 @@ section
   flex-flow: column nowrap
   // align-items: center
   text-align: center
-  font-family: Adam
+  font-family: second-font-family
   color: title-color
   margin-top: 2em
   &#home
     img
       responsive()
     margin-top: 1em
-  &#productos
+  &#products
     hr
       border-width: 0.1em
       width: 50%
@@ -73,7 +119,7 @@ section
     .slider
       margin-top: 2em
     .details
-      margin: 0 2em
+      horizontalMargin()
       &>div
         margin-top: 2em
       p
@@ -82,6 +128,14 @@ section
         responsive()
         width: 3em
         margin-top: 1em
+  &#contact
+    horizontalMargin()
+    input, textarea, button
+      margin-top: 1em
+      padding: 1em
+      border-radius: 1em
+      placeholder-color(title-color)
+      // placeholder-font-weight(bold)
 
 .slick-initialized
   &.slick-dotted.slick-slider
@@ -102,6 +156,7 @@ hr
   margin-top: 2em
 
 footer
+  margin-top: 1em
   text-align: center
   color: title-color
   p
