--- a/index.styl
+++ b/index.styl
@@ -82,7 +82,8 @@ body
   margin: 0
   @media screen and (min-width:769px)
     margin: 0 5em
-
+  @media screen and (min-width:1025px)
+    margin: 0 8em
 header
   // z-index: 1
   display: flex
