--- a/index.styl
+++ b/index.styl
@@ -1,8 +1,8 @@
-title-color = #835d1a
-header-background-color = title-color
-background-color = #fffacd
-ruler-color = #F6C122
-header-height = 0//10vmin
+first-color = #835d1a  // brownish
+header-background-color = first-color
+background-color = #fffacd  // Light yellow
+ruler-color = #F6C122 // Orange
+header-height = 0  // 10vmin
 first-font-family = Arial
 second-font-family = Adam
 @font-face
@@ -26,11 +26,11 @@ input, textarea, button, a.button
   margin-top: 1em
   padding: 1em
   border-radius: 1em
-  placeholder-color(title-color)
+  placeholder-color(first-color)
 button, a.button
   cursor: pointer
   color: white
-  background-color: title-color
+  background-color: first-color
 form
   display: inherit
   flex-flow: inherit
@@ -72,6 +72,7 @@ html
   background-color: background-color
   font-family: first-font-family
   font-size: 4vmin
+  color: first-color
   @media screen and (min-width:769px)
     font-size: 3vmin
 
@@ -89,14 +90,23 @@ header
   display: flex
   justify-content: space-around
   align-items: center
-  background-color: header-background-color
-  height: header-height
-  position: fixed
-  width: 100vw
-  color: white
-  .black-icon
-    filter: invert(1)
-    height: divide(header-height, 2)
+  // background-color: header-background-color
+  // height: header-height
+  // position: fixed
+  // width: 100vw
+  color: inherit
+  a
+    padding: 0.5em
+    flex: 0 3em
+    &:hover
+      background-color: first-color
+      color: background-color
+    &:first-child:hover
+      background-color: background-color
+
+  // .black-icon
+    // filter: invert(1)
+    // height: divide(header-height, 2)
 main
   margin-top: header-height
 section
@@ -105,7 +115,7 @@ section
   // align-items: center
   text-align: center
   font-family: second-font-family
-  color: title-color
+  color: first-color
   margin-top: 2em
   &#home
     img
@@ -146,6 +156,9 @@ section
   display: none
 .show-on-target:target
   display: flex
+.hide-on-target:target
+  display: none
+
 
 .slick-initialized
   &.slick-dotted.slick-slider
@@ -174,7 +187,7 @@ hr
 footer
   margin-top: 1em
   text-align: center
-  color: title-color
+  color: first-color
   p
     line-height: 1.5em
 
